--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ exec-once = hyprpaper
 # Set programs that you use
 $terminal = foot
 $fileManager = dolphin
-$menu = rofi -show drun
+$menu = tofi-drun --drun-launch=true
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -114,7 +114,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
