configured dotfiles script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,6 +27,105 @@ $menu = tofi-drun --drun-launch=true
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
+plugin {
+  hy3 {
+    # disable gaps when only one window is onscreen
+    # 0 - always show gaps
+    # 1 - hide gaps with a single window onscreen
+    # 2 - 1 but also show the window border
+    no_gaps_when_only = 0 # default: 0
+
+    # policy controlling what happens when a node is removed from a group,
+    # leaving only a group
+    # 0 = remove the nested group
+    # 1 = keep the nested group
+    # 2 = keep the nested group only if its parent is a tab group
+    node_collapse_policy = 2 # default: 2
+
+    # offset from group split direction when only one window is in a group
+    group_inset = 10 # default: 10
+
+    # if a tab group will automatically be created for the first window spawned in a workspace
+    tab_first_window = false
+
+    # tab group settings
+    tabs {
+      # height of the tab bar
+      height = 15 # default: 15
+
+      # padding between the tab bar and its focused node
+      padding = 5 # default: 5
+
+      # the tab bar should animate in/out from the top instead of below the window
+      from_top = false # default: false
+
+      # rounding of tab bar corners
+      rounding = 3 # default: 3
+
+      # render the window title on the bar
+      render_text = true # default: true
+
+      # center the window title
+      text_center = false # default: false
+
+      # font to render the window title with
+      text_font = Sans # default: Sans
+
+      # height of the window title
+      text_height = 8 # default: 8
+
+      # left padding of the window title
+      text_padding = 3 # default: 3
+
+      # active tab bar segment color
+      col.active = 0xff32b4ff # default: 0xff32b4ff
+
+      # urgent tab bar segment color
+      col.urgent = 0xffff4f4f # default: 0xffff4f4f
+
+      # inactive tab bar segment color
+      col.inactive = 0x80808080 # default: 0x80808080
+
+      # active tab bar text color
+      col.text.active = 0xff000000 # default: 0xff000000
+
+      # urgent tab bar text color
+      col.text.urgent = 0xff000000 # default: 0xff000000
+
+      # inactive tab bar text color
+      col.text.inactive = 0xff000000 # default: 0xff000000
+    }
+
+    # autotiling settings
+    autotile {
+      # enable autotile
+      enable = true # default: false
+
+      # make autotile-created groups ephemeral
+      ephemeral_groups = true # default: true
+
+      # if a window would be squished smaller than this width, a vertical split will be created
+      # -1 = never automatically split vertically
+      # 0 = always automatically split vertically
+      # <number> = pixel height to split at
+      trigger_width = 0 # default: 0
+
+      # if a window would be squished smaller than this height, a horizontal split will be created
+      # -1 = never automatically split horizontally
+      # 0 = always automatically split horizontally
+      # <number> = pixel height to split at
+      trigger_height = 0 # default: 0
+
+      # a space or comma separated list of workspace ids where autotile should be enabled
+      # it's possible to create an exception rule by prefixing the definition with "not:"
+      # workspaces = 1,2 # autotiling will only be enabled on workspaces 1 and 2
+      # workspaces = not:1,2 # autotiling will be enabled on all workspaces except 1 and 2
+      workspaces = all # default: all
+    }
+  }
+}
+
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -176,11 +275,6 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-bind = SUPER, J, movewindow, l
-bind = SUPER, K, movewindow, r
-bind = SUPER SHIFT, up, movewindow, u
-bind = SUPER SHIFT, down, movewindow, d
-
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -191,7 +285,9 @@ bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 0, movetoworkspace, 1
+
+
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -204,3 +300,5 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+
